# studio-installer

./: .gitignore  .gitmodules  LICENSE  README.md  setup.cfg  setup.py
.github/scripts/: ghactionsutil.py  python-publish.py  simplepypipagebuilder.py
.github/workflows/: python-package.yml  python-publish.yml
preseed/: config.yaml  keyboard-layout.xml  studioinstaller.seed  studioinstaller.seed.tpl
sndbx/: __main__.py  test.py
studioinstaller/: VERSION  __init__.py  __main__.py  app.py  argparser.py  configfile.py  disksmounthelper.py  main.py  mounter.py  partitioner.py  partitioning.py  partmancheater.py  partmanhelper.py  pluginloader.py  pluginsloader.py  postinstaller.py  preinstaller.py  runtimeconfig.py  scheme.py  util.py
studioinstaller/_typing/: __init__.py  stringenum.py  types.py
studioinstaller/action/: __init__.py  actionbase.py  create.py  dismiss.py  encrypt.py  format.py  involve.py  mount.py  release.py  unmount.py
studioinstaller/configfile/: __init__.py  configfilebase.py  fstabconfig.py  iniconfig.py  xmlconfig.py  yamlconfig.py
studioinstaller/distro/: __init__.py  distrofactory.py  distrofactorybase.py  osinstaller.py  partmanhelper.py  postinstaller.py
studioinstaller/insystem/: __init__.py  __main__.py  insysteminstaller.py  postinstallerinsystem.py
studioinstaller/partition/: __init__.py  cryptvv.py  disk.py  encryptedpv.py  encryptedvv.py  lukspv.py  lvlvm.py  lvmlv.py  lvmonluksvg.py  lvmpv.py  plainpv.py  pvluks.py  pvlvm.py  pvplain.py  standardpv.py  vglvmonluks.py  vvcrypt.py
studioinstaller/postextra/: __init__.py  __main__.py  postinstallerextra.py
studioinstaller/util/: system.py  (+4 more)
(+17 files in other folders)
