[metadata]
name = studioinstaller
version = file: studioinstaller/VERSION
url = https://github.com/remico/studio-installer
project_urls =
    Source = https://github.com/remico/studio-installer
    Documentation = https://github.com/remico/studio-installer/wiki
author = Roman Gladyshev
author_email = remicollab@gmail.com
maintainer = Roman Gladyshev
maintainer_email = remicollab@gmail.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities
license = MIT
license_file = LICENSE
description = A tool for semi-automatic installation of GNU Linux OS
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords =
    utility
    installer
    linux
platforms = ['POSIX']

[options]
packages = find:
# package_dir =
#     = src
python_requires = >=3.8
install_requires =
    pyyaml
    spawned @ git+https://github.com/remico/spawned.git@master

[options.package_data]
* = VERSION

# [options.data_files]
# studioinstaller-data =
#     preseed/studioinstaller.seed.tpl
# studioinstaller-data/calamares =
#     preseed/calamares/partition.conf

[options.extras_require]
seed =
    studioinstaller_extra

[options.packages.find]
# where = src
exclude =
    sndbx
    test
    tests

[options.entry_points]
console_scripts =
    studioinstaller = studioinstaller.app:main
